2004-01-31  Yoann Vandoorselaere  <yoann@prelude-ids.org>

	* plugins/simple/ruleset/simple.rules (regex): 
	use the same classification for user authentication
	(succeeded/failed). 

2004-01-23  Yoann Vandoorselaere  <yoann@prelude-ids.org>

	* plugins/simple/simple.c:	
	(simple_run): remove latest "pass" addition, cleanup the
	code and allow use of the "last" attribute with regex 
	that doesn't generate an alert. Keep the pass_rules_first
	option throught.

2004-01-23  Yoann Vandoorselaere  <yoann@prelude-ids.org>

	(set_pass_first): 
	(parse_rule_pass): implemented.
	(parse_rule_keyword): hook pass keyword.
	(simple_run): stop walking rule in case we meet a "pass" rule.

	(plugin_init): new option to process pas rule first, 
	if the user want to. Make this option get higher priority than
	the ruleset specification option.
	
	(parse_ruleset_directive): if the "pass rules" first option was
	specified, add pass rules at the begining of the list.

2004-01-20   Gene R Gomez  <gene@gomezbrothers.com>

	* plugins/simple/ruleset:
	Cleaned up regex to remove some syslog dependencies (vigor.rules
	and a few others without sample logs remain).  Added honeyd.rules
	ruleset.

2004-01-15  Yoann Vandoorselaere  <yoann@prelude-ids.org>

	* plugins/simple/ruleset/simple.rules (regex): 
	better rules.

	* plugins/simple/ruleset/grsecurity.rules: 
	* plugins/simple/ruleset/ssh.rules: 
	syslog independance...
	
	* src/lml-alert.c (generate_target): 
	reuse existing target if any. We need some kind of
	mechanism so that it is totally doable from the rulesets.

	* prelude-lml.conf.in (file): 
	update metalog default format.

2004-01-11  Yoann Vandoorselaere  <yoann@prelude-ids.org>

	* src/log-common.c (log_file_new): 
	oops, set default ts_fmt.

2004-01-10  Yoann Vandoorselaere  <yoann@prelude-ids.org>

	* src/log-common.c 
	(format_header, handle_escaped, format_common): 
	(format_tstamp): Re-worked, cleaned-up, with the 
	ability to tell where exactly in the log is the